# plantcv-annotate

./: .deepsource.toml  .gitattributes  .gitignore  README.md  environment.yml  mkdocs.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: continuous-integration.yml
docs/: CONTRIBUTING.md  Points.md  changelog.md  documentation.md  get_centroids.md  index.md  installation.md  napari_bounding_box.md  napari_classes.md  napari_join_labels.md  napari_keys.md  napari_label_classes.md  napari_naive_bayes_color.md  napari_naive_bayes_colors.md  napari_open.md  napari_points_mask.md  napari_read_coor.md  napari_save_coor.md  points_correct_mask.md  points_save.md
plantcv/annotate/: __init__.py  classes.py  classestomove.py  get_centroids.py  napari_bbox.py  napari_classes.py  napari_join_labels.py  napari_keys.py  napari_label_classes.py  napari_naive_bayes_data.py  napari_open.py  napari_points_mask.py  napari_read_coor.py  napari_save_coor.py
plantcv/tests/plantcv/annotate/: conftest.py  test_points.py
tests/: conftest.py  test_annotate.py  test_annotate_get_centroids.py  test_annotate_points.py  test_napari_bbox.py  test_napari_classes.py  test_napari_join_labels.py  test_napari_keys.py  test_napari_label_classes.py  test_napari_naive_bayes.py  test_napari_open.py  test_napari_points_mask.py  test_napari_read_coor.py  test_napari_save_coor.py
tests/testdata/: germinated.txt  my_maskdict.npy
