[build-system]
requires = ["setuptools >= 64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plantcv.annotate"]

[project]
name = "plantcv-annotate"
dynamic = ["version"]
dependencies = [
    "plantcv",
    "matplotlib",
    "napari",
    "PyQt5"
]
requires-python = ">=3.6"
authors = [
    {name = "PlantCV Team", email = "plantcv@danforthcenter.org"},
]
description = "PlantCV Annotate add-on package"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["plantcv", "annotation", "image annotation", "annotate", "interactive"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Intended Audience :: Science/Research",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-qt"
]

[project.urls]
Homepage = "https://plantcv.org"
Documentation = "https://plantcv.readthedocs.io"
Repository = "https://github.com/danforthcenter/plantcv-annotate"

[tool.setuptools_scm]
